--- a/front/index.html
+++ b/front/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <div class="page">
+        <div class="main check">
+            <div class="authorization check">
+                <h1 class="logo_authorization">Авторизация</h1>
+                <input type="text" placeholder="login">
+                <input type="password" placeholder="password">
+                <button>Войти</button>
+                <a href="#">Зарегистрироваьться</a>
+                <a href="#">Забыл пароль</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
