--- a/front/index.html
+++ b/front/index.html
@@ -14,7 +14,7 @@
                 <h1 class="logo_authorization">Авторизация</h1>
                 <input type="text" placeholder="login">
                 <input type="password" placeholder="password">
-                <button>Войти</button>
+                <button class="log_auth">Войти</button>
                 <a href="#">Зарегистрироваьться</a>
                 <a href="#">Забыл пароль</a>
             </div>
