--- a/front/index.html
+++ b/front/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="page">
-        <div class="main check">
-            <div class="authorization check">
+        <div class="main">
+            <div class="authorization">
                 <h1 class="logo_authorization">Авторизация</h1>
                 <input type="text" placeholder="login">
                 <input type="password" placeholder="password">
