--- a/front/index.html
+++ b/front/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,8 +12,8 @@
         <div class="main">
             <div class="authorization reg_auth reg_auth_visible">
                 <h1 class="logo_authorization">Авторизация</h1>
-                <input type="text" placeholder="login">
-                <input type="password" placeholder="password">
+                <input type="text" placeholder="Почта">
+                <input type="password" placeholder="Пароль">
                 <button class="log_auth_but">Войти</button>
                 <a href="#" id="log" onclick="visible()">Зарегистрироваьться</a>
                 <a href="#">Забыл пароль</a>
